--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ requests
 pyttsx3
 Pillow
 python-doctr[tf]
-opencv-python~=4.10.0.84
+opencv-python-headless~=4.10.0.84
 ultralytics~=8.2.78
 pytesseract
 onnxruntime==1.15.0
